# Full-stack-Challenge

./: .env.example  .gitignore  AI_USAGE_REVIEW.md  API.md  DATABASE_SCHEMA.md  README.md  TEST_REPORT.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.github/workflows/: ci.yml
adint/: __init__.py  cli.py  models.py  scorer.py  spec.py
adint/judges/: __init__.py  base.py  fixture.py  openai_vision.py
app/: globals.css  layout.tsx  page.tsx
data/: CORPUS_TEMPLATE.md  corpus_manifest.csv  factor_mining.csv
data/factors/: phone_accessories_v0.yaml  phone_accessories_v1.yaml
data/labels/: labels.csv
fixtures/judgments/: strong_case_001.json  strong_case_002.json  strong_case_003.json  strong_case_004.json  strong_case_005.json  strong_case_006.json  strong_case_007.json  strong_case_008.json  strong_case_009.json  strong_case_010.json  strong_case_011.json  strong_case_012.json  strong_case_013.json  strong_case_014.json  strong_case_015.json  strong_case_016.json  strong_case_017.json  (+25 more)
prisma/: schema.prisma  seed.ts
reports/: CALIBRATION_TABLES.md  DRIFT_TEST_TABLE.md  FINAL_REPORT.md  REPORT_TEMPLATE.md  calibration_metrics.csv  confusion_matrix.csv  drift_test_runs.csv  drift_test_summary.csv  judge_agreement.csv  train_holdout_protocol.csv
scripts/: WORKPLAN.md  evaluate_calibration.py  export_report_tables.py  generate_judgment_fixtures.py  run_drift_test.py  run_fixture_calibration.py  summarize_factor_mining.py  tune_factor_weights.py
tests/: health.test.ts  persistence-api.test.ts  test_scoring.py  workflows.test.ts
(+63 files in other folders)
